# Getter_Setter_Generator_cpp

./: .gitignore  README.md  Variables.cpp  Variables.hpp  boost_main.cpp  main.cpp
GetterSetterGenerator/: CMakeLists.txt  Variables.cpp  Variables.hpp  boost_main.cpp
